# hcounter

./: .env.example  .gitignore  Makefile  README.md  commands.md  pyproject.toml
.opencode/plans/: plan.md
src/hourbot/: __init__.py  config.py  db.py  main.py  service.py
tests/: test_db_aggregation.py  test_service_format.py  test_service_getmm.py  test_service_parse.py
